--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
                 </ul>
             </section>
             <figure>
-                <img src="img/box1.png" alt="Сотрудник пишет код" width="370" height="294" />
-                <img src="img/box2.png" alt="Сотрудник работает над мобильной версией сайта" width="370" height="294" />
-                <img src="img/box3.png" alt="Сотрудник работает с цветовой гаммой" width="370" height="294" />
+                <img src="img/box1.jpg" alt="Сотрудник пишет код" width="370" height="294" />
+                <img src="img/box2.jpg" alt="Сотрудник работает над мобильной версией сайта" width="370" height="294" />
+                <img src="img/box3.jpg" alt="Сотрудник работает с цветовой гаммой" width="370" height="294" />
                 <figcaption>
                     <h2>Чем мы занимаемся</h2>
                 </figcaption>
