--- a/index.html
+++ b/index.html
@@ -2,106 +2,114 @@
 <html lang="ru">
 
 <head>
-    <meta charset="utf-8" />
-    <title>Эффективные решения для вашего бизнеса</title>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Веб студия</title>
 </head>
 
 <body>
     <!-- Page header -->
     <header>
-        <a href="">WebStudio</a>
+        <a href="" lang="en">WebStudio</a>
         <!-- Main navigation -->
         <nav>
             <!-- Links to other pages of the current page -->
             <ul>
-                <li><a href="/студия">Студия</a></li>
-                <li><a href="/портфолио">Портфолио</a></li>
-                <li><a href="/контакты">Контакты</a></li>
+                <li>
+                    <a href="/студия">Студия</a>
+                </li>
+                <li>
+                    <a href="/портфолио">Портфолио</a>
+                </li>
+                <li>
+                    <a href="/контакты">Контакты</a>
+                </li>
             </ul>
         </nav>
         <!-- Contacts -->
-        <div>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        </div>
-        <div>
-            <a href="tel:+380961111111">+38 096 111 11 11</a>
-        </div>
+        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+        <a href="tel:+380961111111">+38 096 111 11 11</a>
     </header>
 
     <main>
-        <!-- Main content section -->
-        <article>
-            <!-- Main content header -->
-            <header>
-                <h1>Эффективные решения для вашего бизнеса</h1>
-                <button type="button">Заказать услугу</button>
-            </header>
-            <!-- Particular qualities section -->
-            <section>
-                <ul>
-                    <li>
-                        <h4>Внимание к деталям</h4>
-                        <p>
-                            Идейные соображения, а также начало повседневной работы по формированию позиции.
-                        </p>
-                    </li>
-                    <li>
-                        <h4>Пунктуальность</h4>
-                        <p>
-                            Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
-                        </p>
-                    </li>
-                    <li>
-                        <h4>Планирование</h4>
-                        <p>
-                            Равным образом консультация с широким активом в значительной степени обуславливает.
-                        </p>
-                    </li>
-                    <li>
-                        <h4>Современные технологии</h4>
-                        <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
-                    </li>
-                </ul>
-            </section>
-            <figure>
-                <img src="img/box1.jpg" alt="Сотрудник пишет код" width="370" height="294" />
-                <img src="img/box2.jpg" alt="Сотрудник работает над мобильной версией сайта" width="370" height="294" />
-                <img src="img/box3.jpg" alt="Сотрудник работает с цветовой гаммой" width="370" height="294" />
-                <figcaption>
-                    <h2>Чем мы занимаемся</h2>
-                </figcaption>
-            </figure>
-            <footer>
-                <!-- Our team section -->
-                <h2>Наша команда</h2>
-                <ul>
-                    <li>
-                        <img src="img/img(1).jpg" alt="Белый мужчина с бородой и в очках" width="270" height="260" />
-                        <h4>Игорь Демьяненко</h4>
-                        <p>Product Designer</p>
-                    </li>
-                    <li>
-                        <img src="img/img(2).jpg" alt="Белая женщина блондинка в очках" width="270" height="260" />
-                        <h4>Ольга Репина</h4>
-                        <p>Frontend Developer</p>
-                    </li>
-                    <li>
-                        <img src="img/img(3).jpg" alt="Молодой мужчина с бородой и усами" width="270" height="260" />
-                        <h4>Николай Тарасов</h4>
-                        <p>Marketing</p>
-                    </li>
-                    <li>
-                        <img src="img/img(4).jpg" alt="Молодой мужчина с темными волосами,бородой и в очках" width="270" height="260" />
-                        <h4>Михаил Ермаков</h4>
-                        <p>UI Designer</p>
-                    </li>
-                </ul>
-            </footer>
-        </article>
+        <!-- Hero section -->
+        <section>
+            <h1>
+                Эффективные решения <br /> для вашего бизнеса
+            </h1>
+            <button type="button">Заказать услугу</button>
+        </section>
+        <!-- Particular qualities section -->
+        <section>
+            <ul>
+                <li>
+                    <h3>Внимание к деталям</h3>
+                    <p>
+                        Идейные соображения, а также
+                        <br /> начало повседневной работы по <br /> формированию позиции.
+                    </p>
+                </li>
+                <li>
+                    <h3>Пунктуальность</h3>
+                    <p>
+                        Задача организации, в особенности
+                        <br /> же рамки и место обучения кадров <br /> влечет за собой.
+                    </p>
+                </li>
+                <li>
+                    <h3>Планирование</h3>
+                    <p>
+                        Равным образом консультация с
+                        <br /> широким активом в значительной <br /> степени обуславливает.
+                    </p>
+                </li>
+                <li>
+                    <h3>Современные технологии</h3>
+                    <p>
+                        Значимость этих проблем настолько
+                        <br /> очевидна, что реализация плановых <br /> заданий.
+                    </p>
+                </li>
+            </ul>
+        </section>
+        <!-- What we do section -->
+        <section>
+            <h2>Чем мы занимаемся</h2>
+            <img src="./img/box-1.jpg" alt="Сотрудник пишет код" width="370" height="294" />
+            <img src="./img/box-2.jpg" alt="Сотрудник работает над мобильной версией сайта" width="370" height="294" />
+            <img src="./img/box-3.jpg" alt="Сотрудник работает с цветовой гаммой" width="370" height="294" />
+        </section>
+        <!-- Our team section -->
+        <section>
+            <h2>Наша команда</h2>
+            <ul>
+                <li>
+                    <img src="./img/team-1.jpg" alt="Мужчина с бородой и в очках" width="270" height="260" />
+                    <h4>Игорь Демьяненко</h4>
+                    <p lang="en">Product Designer</p>
+                </li>
+                <li>
+                    <img src="./img/team-2.jpg" alt="Женщина блондинка в очках" width="270" height="260" />
+                    <h4>Ольга Репина</h4>
+                    <p lang="en">Frontend Developer</p>
+                </li>
+                <li>
+                    <img src="./img/team-3.jpg" alt="Молодой мужчина с бородой и усами" width="270" height="260" />
+                    <h4>Николай Тарасов</h4>
+                    <p lang="en">Marketing</p>
+                </li>
+                <li>
+                    <img src="./img/team-4.jpg" alt="Молодой мужчина с темными волосами,бородой и в очках" width="270" height="260" />
+                    <h4>Михаил Ермаков</h4>
+                    <p lang="en">UI Designer</p>
+                </li>
+            </ul>
+        </section>
     </main>
     <!-- Page footer -->
     <footer>
-        <a href="">WebStudio</a>
+        <a href="" lang="en">WebStudio</a>
         <address>г. Киев, пр-т Леси Украинки, 26</address>
         <address>
         <a href="mailto:info@devstudio.com">info@devstudio.com</a>
