Commit for hand in

--- a/index.html
+++ b/index.html
@@ -11,19 +11,19 @@
 <body>
     <!-- Page header -->
     <header>
-        <a href="" lang="en">WebStudio</a>
         <!-- Main navigation -->
         <nav>
+            <a href="./index.html" lang="en"><span>Web</span>Studio</a>
             <!-- Links to other pages of the current page -->
             <ul>
                 <li>
-                    <a href="/студия">Студия</a>
+                    <a href="">Студия</a>
                 </li>
                 <li>
-                    <a href="/портфолио">Портфолио</a>
+                    <a href="">Портфолио</a>
                 </li>
                 <li>
-                    <a href="/контакты">Контакты</a>
+                    <a href="">Контакты</a>
                 </li>
             </ul>
         </nav>
@@ -40,36 +40,29 @@
             </h1>
             <button type="button">Заказать услугу</button>
         </section>
-        <!-- Particular qualities section -->
+        <!-- Features section -->
         <section>
+            <h2>Особенности работы компании</h2>
             <ul>
                 <li>
                     <h3>Внимание к деталям</h3>
-                    <p>
-                        Идейные соображения, а также
-                        <br /> начало повседневной работы по <br /> формированию позиции.
-                    </p>
+                    <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                 </li>
                 <li>
                     <h3>Пунктуальность</h3>
                     <p>
-                        Задача организации, в особенности
-                        <br /> же рамки и место обучения кадров <br /> влечет за собой.
+                        Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
                     </p>
                 </li>
                 <li>
                     <h3>Планирование</h3>
                     <p>
-                        Равным образом консультация с
-                        <br /> широким активом в значительной <br /> степени обуславливает.
+                        Равным образом консультация с широким активом в значительной степени обуславливает.
                     </p>
                 </li>
                 <li>
                     <h3>Современные технологии</h3>
-                    <p>
-                        Значимость этих проблем настолько
-                        <br /> очевидна, что реализация плановых <br /> заданий.
-                    </p>
+                    <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                 </li>
             </ul>
         </section>
@@ -86,35 +79,35 @@
             <ul>
                 <li>
                     <img src="./img/team-1.jpg" alt="Мужчина с бородой и в очках" width="270" height="260" />
-                    <h4>Игорь Демьяненко</h4>
+                    <h3>Игорь Демьяненко</h3>
                     <p lang="en">Product Designer</p>
                 </li>
                 <li>
                     <img src="./img/team-2.jpg" alt="Женщина блондинка в очках" width="270" height="260" />
-                    <h4>Ольга Репина</h4>
+                    <h3>Ольга Репина</h3>
                     <p lang="en">Frontend Developer</p>
                 </li>
                 <li>
                     <img src="./img/team-3.jpg" alt="Молодой мужчина с бородой и усами" width="270" height="260" />
-                    <h4>Николай Тарасов</h4>
+                    <h3>Николай Тарасов</h3>
                     <p lang="en">Marketing</p>
                 </li>
                 <li>
                     <img src="./img/team-4.jpg" alt="Молодой мужчина с темными волосами,бородой и в очках" width="270" height="260" />
-                    <h4>Михаил Ермаков</h4>
+                    <h3>Михаил Ермаков</h3>
                     <p lang="en">UI Designer</p>
                 </li>
             </ul>
         </section>
     </main>
-    <!-- Page footer -->
+    <!-- Footer -->
     <footer>
-        <a href="" lang="en">WebStudio</a>
-        <address>г. Киев, пр-т Леси Украинки, 26</address>
+        <a href="./index.html" lang="en"><span>Web</span>Studio</a>
         <address>
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a href="tel:+380961111111">+38 096 111 11 11</a>
-      </address>
+            <p>г. Киев, пр-т Леси Украинки, 26</p>
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a> <br />
+            <a href="tel:+380961111111">+38 096 111 11 11</a>
+        </address>
     </footer>
 </body>
 
